<resources>
    <string name="app_name">MyPokemon</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="pokemon_kind">Pokemon Kind</string>
    <string-array name="types">
        <item>Grass, Poison</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass, Flying</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Fire</item>
        <item>Water</item>
    </string-array>
    <string name="height">Height :</string>
    <string name="weight">Weight :</string>
    <string name="ability">Ability :</string>
    <string name="hidden_ability">Hidden Ability :</string>
    <string name="region">Region :</string>
    <string name="generation">Generation :</string>
    <string name="entry">Pokedex Entry</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="staggered">Staggered</string>
    <string name="trainer">Trainer Profile</string>
    <string name="trainer_name">Trainer Name:</string>
    <string name="trainer_id">Trainer ID:</string>
    <string name="trainer_email">Trainer Email:</string>
    <string name="my_name">Muhammad Rizky Aulia</string>
    <string name="my_id">2209106067</string>
    <string name="my_email">mrizkynoob@gmail.com</string>
    <string-array name="data_name">
        <item>Bulbasaur</item>
        <item>Charmander</item>
        <item>Squirtle</item>
        <item>Chikorita</item>
        <item>Cyndaquil</item>
        <item>Totodile</item>
        <item>Treecko</item>
        <item>Torchic</item>
        <item>Mudkip</item>
        <item>Turtwig</item>
        <item>Chimchar</item>
        <item>Piplup</item>
        <item>Snivy</item>
        <item>Tepig</item>
        <item>Oshawott</item>
        <item>Chespin</item>
        <item>Fennnekin</item>
        <item>Froakie</item>
        <item>Rowlet</item>
        <item>Litten</item>
        <item>Popplio</item>
        <item>Grookey</item>
        <item>Scorbunny</item>
        <item>Sobble</item>
        <item>Sprigatito</item>
        <item>Fuecoco</item>
        <item>Quaxly</item>
    </string-array>
    <string-array name="data_kind">
        <item>The Seed Pokemon</item>
        <item>The Lizard Pokemon</item>
        <item>The Tiny Turtle Pokemon</item>
        <item>The Leaf Pokemon</item>
        <item>The Fire Mouse Pokemon</item>
        <item>The Big Jaw Pokemon</item>
        <item>The Wood Gecko Pokemon</item>
        <item>The Chick Pokemon</item>
        <item>The Mud Fish Pokemon</item>
        <item>The Tiny Leaf Pokemon</item>
        <item>The Chimp Pokemon</item>
        <item>The Penguin Pokemon</item>
        <item>The Grass Snake Pokemon</item>
        <item>The Fire Pig Pokemon</item>
        <item>The Sea Otter Pokemon</item>
        <item>The Spiny Nut Pokemon</item>
        <item>The Fox Pokemon</item>
        <item>The Bubble Frog Pokemon</item>
        <item>The Grass Quill Pokemon</item>
        <item>The Fire Cat Pokemon</item>
        <item>The Sea Lion Pokemon</item>
        <item>The Chimp Pokemon</item>
        <item>The Rabbit Pokemon</item>
        <item>The Water Lizard Pokemon</item>
        <item>The Grass Cat Pokemon</item>
        <item>The Fire Croc Pokemon</item>
        <item>The Duckling Pokemon</item>
    </string-array>
    <string-array name="pokemon_heights">
        <item>0.71 m</item>
        <item>0.61 m</item>
        <item>0.51 m</item>
        <item>0.89 m</item>
        <item>0.51 m</item>
        <item>0.61 m</item>
        <item>0.51 m</item>
        <item>0.41 m</item>
        <item>0.41 m</item>
        <item>0.51 m</item>
        <item>0.51 m</item>
        <item>0.41 m</item>
        <item>0.61 m</item>
        <item>0.51 m</item>
        <item>0.51 m</item>
        <item>0.41 m</item>
        <item>0.41 m</item>
        <item>0.30 m</item>
        <item>0.30 m</item>
        <item>0.41 m</item>
        <item>0.41 m</item>
        <item>0.30 m</item>
        <item>0.30 m</item>
        <item>0.30 m</item>
        <item>0.41 m</item>
        <item>0.51 m</item>
        <item>0.51 m</item>
    </string-array>
    <string-array name="pokemon_weights">
        <item>6.9 kg</item>
        <item>8.5 kg</item>
        <item>9.0 kg</item>
        <item>6.4 kg</item>
        <item>7.9 kg</item>
        <item>10.0 kg</item>
        <item>5.0 kg</item>
        <item>5.5 kg</item>
        <item>8.5 kg</item>
        <item>11.6 kg</item>
        <item>9.6 kg</item>
        <item>5.0 kg</item>
        <item>8.0 kg</item>
        <item>9.0 kg</item>
        <item>6.0 kg</item>
        <item>9.0 kg</item>
        <item>9.0 kg</item>
        <item>7.0 kg</item>
        <item>1.5 kg</item>
        <item>3.8 kg</item>
        <item>7.5 kg</item>
        <item>5.0 kg</item>
        <item>4.5 kg</item>
        <item>3.0 kg</item>
        <item>4.5 kg</item>
        <item>9.0 kg</item>
        <item>7.0 kg</item>
    </string-array>
    <string-array name="pokemon_abilities">
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Torrent</item>
    </string-array>
    <string-array name="pokemon_hidden_abilities">
        <item>Chlorophyll</item>
        <item>Solar Power</item>
        <item>Rain Dish</item>
        <item>Leaf Guard</item>
        <item>Flash Fire</item>
        <item>Sheer Force</item>
        <item>Unburden</item>
        <item>Speed Boost</item>
        <item>Swift Swim</item>
        <item>Shell Armor</item>
        <item>Iron Fist</item>
        <item>Competitive</item>
        <item>Contrary</item>
        <item>Reckless</item>
        <item>Shell Armor</item>
        <item>Bulletproof</item>
        <item>Magician</item>
        <item>Protean</item>
        <item>Long Reach</item>
        <item>Intimidate</item>
        <item>Liquid Voice</item>
        <item>Grassy Surge</item>
        <item>Libero</item>
        <item>Sniper</item>
        <item>Protean</item>
        <item>Unaware</item>
        <item>Moxie</item>
    </string-array>
    <string-array name="pokemon_regions">
        <item>Kanto</item>
        <item>Kanto</item>
        <item>Kanto</item>
        <item>Johto</item>
        <item>Johto</item>
        <item>Johto</item>
        <item>Hoenn</item>
        <item>Hoenn</item>
        <item>Hoenn</item>
        <item>Sinnoh</item>
        <item>Sinnoh</item>
        <item>Sinnoh</item>
        <item>Unova</item>
        <item>Unova</item>
        <item>Unova</item>
        <item>Kalos</item>
        <item>Kalos</item>
        <item>Kalis</item>
        <item>Alola</item>
        <item>Alola</item>
        <item>Alola</item>
        <item>Galar</item>
        <item>Galar</item>
        <item>Galar</item>
        <item>Paldea</item>
        <item>Paldea</item>
        <item>Paldea</item>
    </string-array>
    <string-array name="pokemon_generations">
        <item>Generation I</item>
        <item>Generation I</item>
        <item>Generation I</item>
        <item>Generation II</item>
        <item>Generation II</item>
        <item>Generation II</item>
        <item>Generation III</item>
        <item>Generation III</item>
        <item>Generation III</item>
        <item>Generation IV</item>
        <item>Generation IV</item>
        <item>Generation IV</item>
        <item>Generation V</item>
        <item>Generation V</item>
        <item>Generation V</item>
        <item>Generation VI</item>
        <item>Generation VI</item>
        <item>Generation VI</item>
        <item>Generation VII</item>
        <item>Generation VII</item>
        <item>Generation VII</item>
        <item>Generation VIII</item>
        <item>Generation VIII</item>
        <item>Generation VIII</item>
        <item>Generation IX</item>
        <item>Generation IX</item>
        <item>Generation IX</item>
    </string-array>
</resources>