<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/tv_trainer_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trainer"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_trainer_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/profileimage"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/tv_trainer_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_trainer_photo"
            app:layout_constraintVertical_bias="0.072"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv_trainer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer_name"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/tv_trainer_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/my_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_trainer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer_id"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_trainer_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/my_id"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_trainer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer_email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_trainer_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_email"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

