<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp"
        />

    <TextView
        android:id="@+id/tv_types"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/types"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_type_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_type_value"
        />

    <TextView
        android:id="@+id/tv_type_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_height_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_types"
        app:layout_constraintTop_toTopOf="@+id/tv_types"
        app:layout_constraintVertical_bias="0.527"
        />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/height"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_height_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_value"
        />

    <TextView
        android:id="@+id/tv_height_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_weight_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_height"
        app:layout_constraintTop_toTopOf="@+id/tv_height"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/weight"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_weight_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_height_value"
        />

    <TextView
        android:id="@+id/tv_weight_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_ability_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_weight"
        app:layout_constraintTop_toTopOf="@+id/tv_weight"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_ability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ability"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_hidden_ability"
        app:layout_constraintEnd_toStartOf="@+id/tv_ability_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight_value"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_ability_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_hidden_ability_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_ability"
        app:layout_constraintTop_toTopOf="@+id/tv_ability"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_hidden_ability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hidden_ability"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_region"
        app:layout_constraintEnd_toStartOf="@+id/tv_hidden_ability_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ability_value"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_hidden_ability_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_region_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_hidden_ability"
        app:layout_constraintTop_toTopOf="@+id/tv_hidden_ability"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_region"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/region"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_generation"
        app:layout_constraintEnd_toStartOf="@+id/tv_region_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hidden_ability_value"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_region_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_generation_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_region"
        app:layout_constraintTop_toTopOf="@+id/tv_region"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_generation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/generation"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_generation_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_region_value"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_generation_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_generation"
        app:layout_constraintTop_toTopOf="@+id/tv_generation"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/entry"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_generation_value"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/tv_entry_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_entry"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

